Finished blogpost project

--- a/index.html
+++ b/index.html
@@ -1,12 +1,26 @@
 <html lang="en">
+
 <head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>Mohamed.hamad blogpost project</title>
+    <link rel="stylesheet" href="style.css">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Gemunu+Libre:wght@400;500;700&display=swap" rel="stylesheet"> 
 </head>
+
 <body>
-    <h1>project</h1>
-    <h2 class="class-1">any change</h2>
+    <h1 id="title">Best budget gaming setups under $6,000</h1>
+    <div class="background">
+        <h2 class="string-pc">This gaming setup uses strings to offer a more cost effective form of a standing desk. It has average specs and will be able to run modern titles like valorant at a groundbreaking 2 frames per seconds. www.dontbuycomputersfromus.com 
+        </h2> 
+            <img class="string-img" src="pictures/8-most-dangerous-gaming-setup.jpg" height="400" width="1000">
+            <img class="dusty-img" src="pictures/dusty-pc.jpg" height="400" width="1000">
+            <img class="cardboard-img" src="pictures/cardboard-computer.jpg" height="400" width="1000">
+        <h2 class="dusty-pc"> This gaming setup doubles as a personal oven for your room. Assuming that it will even power on. Airflow is practically non existant in this case and causes very high thermals. You can play league of legends and cook your pizza bites at the same time. www.dontbuycomputersfromus.com</h2>
+        <h2 class="cardboard-pc">This gaming PC is completly made out of cardboard. It is very inexpenive and only requires a little bit of skill and some glue to build. While it cannot actually run videogames it allows you to use your imagination much more than a normal computer. You can play any game you want on this. All you have to do is visualize yourself playing. www.dontbuycomputersfromus.com</h2>
+    </div>
 </body>
+
 </html>
